[metadata]
name = nexushousekeeper
version = 0.0.3.dev4
author = Raimondi Benjamin
author_email = benjamin.raimondi@gmail.com
Home-page = https://github.com/benDeMtp/NexusHouseKeeper
summary = A module to maintain a nexus directory clean
keywords = nexus, clean
License = MIT License
Classifier= Development Status :: 4 - Beta
Requires-Python: >=3

[options]
packages = nexushousekeeper
install_requires =
  certifi==2020.12.5
  chardet==3.0.4
  colorama==0.4.4
  commonmark==0.9.1
  hurry.filesize==0.9
  idna==2.10
  Pygments==2.7.3
  requests==2.25.0
  requests-futures==1.0.0
  rich>=9.4.0
  typing-extensions==3.7.4.3
  urllib3==1.26.2
  python_version >= "3.6"

[options.entry_points]
console_scripts =
    nexushousekeeper = nexushousekeeper.NexusHouseKeeper:main